adm/employees BETTER + date formatter

--- a/src/main/resources/static/css/administrators/admin__employees.css
+++ b/src/main/resources/static/css/administrators/admin__employees.css
@@ -1,124 +1,42 @@
 @import url("../common.css");
 
-.admin-employees-grid {
+.grid {
     display: grid;
-    grid: "admin-header admin-header" 80px "table table" "buttons inputs";
-    grid-template-columns: 1fr 9fr;
+    grid: "header" 90px "table" "inputs";
     row-gap: 10px;
 }
 
-.admin-employees-grid__table {
-    margin-top: 10px;
+.grid__table {
     grid-area: table;
     min-height: 200px;
-    justify-content: flex-start;
+    max-height: 500px;
+    overflow-y: scroll;
 }
 
-.admin-employees-grid__table table {
+.grid__table table {
     border-collapse: collapse;
 }
 
-.admin-employees-grid__table td {
+.grid__table td {
     padding: 3px 6px;
     border: 1px solid black;
 }
 
-.admin-employees-grid__buttons {
-    grid-area: buttons;
-    display: grid;
-    grid: "add edit" "find reward";
-    row-gap: 10px;
-    column-gap: 15px;
-}
-
-#add-button {
-    grid-area: add;
-}
-
-#edit-button {
-    grid-area: edit;
-}
-
-#reward-button {
-    grid-area: reward;
-}
-
-#find-button {
-    grid-area: find;
-}
-
-.admin-employees-grid__inputs {
+.grid__inputs {
     grid-area: inputs;
 }
 
-.admin-employees-grid__inputs_add {
-    padding: 0 15px;
-    height: 100%;
+.grid__buttons {
+    grid-area: inputs;
+    align-items: flex-start;
 }
 
-.add-employees-inputs-grid {
-    display: grid;
-    grid: "name type position" "salary lvl button";
-    grid-template-columns: 2fr 1fr 2fr;
-    column-gap: 15px;
-    row-gap: 5px;
-    width: 35vw;
-    margin-top: 10px;
+.grid__buttons * {
+    margin: 15px;
 }
 
-.add-employees-inputs-grid * {
-    font-size: 16px;
-}
-
-.add-employees-inputs-grid__name {
-    grid-area: name;
-    height: 35px;
-    width: 200px;
-}
-
-.add-employees-inputs-grid__lvl {
-    grid-area: lvl;
-    height: 35px;
-    width: 90px;
-}
-
-.add-employees-inputs-grid__salary {
-    grid-area: salary;
-    height: 35px;
-    width: 200px;
-}
-
-.add-employees-inputs-grid__position {
-    grid-area: position;
-    height: 35px;
-    width: 200px;
-}
-
-.add-employees-inputs-grid__type {
-    grid-area: type;
-    height: 30px;
-    width: 90px;
-    text-align: center;
-}
-
-.add-employees-inputs-grid__button {
-    grid-area: button;
-    height: 50px;
-    width: 200px;
-    font-size: 20px;
-}
-
-.admin-employees-grid__inputs_edit {
-}
-
-.admin-employees-grid__inputs_find {
-}
-
-.admin-employees-grid__inputs_reward {
-}
-
-.admin-header {
-    grid-area: admin-header;
+.header {
+    grid-area: header;
     margin-top: 5px;
 }
 
@@ -126,28 +44,26 @@
     margin: 5px 0 auto 0;
 }
 
-@media (max-width: 730px) {
-    .admin-employees-grid {
-        grid: "admin-header" 60px "table" "buttons" "inputs";
+@media (max-width: 600px) {
+    .grid {
+        grid: "header" 90px "table" "buttons" "inputs";
+        grid-row-gap: 0;
     }
 
-    .admin-employees-grid__buttons{
-        grid: "add edit find reward";
-        grid-column-gap: 5vw;
+    .flex-column-top {
+        flex-direction: row;
+        justify-content: center;
     }
 
-    .add-employees-inputs-grid{
-        grid: "name name" "salary salary" "position position" "lvl type" "button button";
-        grid-row-gap: 10px;
-    }
-}
-
-@media (max-width: 377px) {
-    .admin-employees-grid__table{
-        font-size: 13px;
+    .grid__buttons {
+        grid-area: buttons;
     }
 
-    .admin-employees-grid__buttons{
-        grid-column-gap: 10px;
+    .grid__buttons * {
+        margin: 10px 3vw;
+    }
+
+    .grid__table {
+        font-size: 14px;
     }
 }
