--- a/src/main/resources/templates/administrators/admin__district.html
+++ b/src/main/resources/templates/administrators/admin__district.html
@@ -8,8 +8,8 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="admin-employees-grid">
-    <div class="flex-row admin-header">
+<div class="grid">
+    <div class="flex-row header">
         <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button_back button_round">
         </a>
