--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -8,7 +8,7 @@
     <title>MNU</title>
 </head>
 <body>
-    <div class="flex-row-left admin-header">
+    <div class="flex-row-left header">
         <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
         </a>
