--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -69,6 +69,10 @@
             <div th:text="${exp.statusDate}"></div>
             <b>Description</b>
             <div th:text="${exp.description}"></div>
+            <div class="flex-column">
+                <a th:href="@{'/sci/report/' + ${exp.id}}" th:attr="data-exp-id=${exp.id}"
+                   class="button">Write report</a>
+            </div>
         </div>
     </div>
 </div>
