--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -13,6 +13,10 @@ body {
     margin-top: 20px;
 }
 
+.form-item_small{
+    margin-top: 10px;
+}
+
 .button {
     color: black;
     text-decoration: none;
@@ -63,6 +67,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.flex-column-top{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
 }
 
