--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="administrators-menu-grid">
-    <div class="admin-header">
+    <div class="header">
         <div class="employee-info">
             <div th:text="${fullname}"></div>
             <div th:text="${'Level ' + level}"></div>
