--- a/src/main/resources/templates/administrators/admin__district.html
+++ b/src/main/resources/templates/administrators/admin__district.html
@@ -11,17 +11,11 @@
 <div class="grid">
     <div class="flex-row header">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button_back button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="button_back button_round">
         </a>
-        <div class="employee-info">
-            <div th:text="${fullname}"></div>
-            <div th:text="${'Level ' + level}"></div>
-        </div>
     </div>
-    <div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
-            <!-- ДУМОЕМ................................................ -->
-        </svg>
+
+    <div class="content">
     </div>
 </div>
 </body>
