--- a/src/main/resources/templates/administrators/admin__experiments.html
+++ b/src/main/resources/templates/administrators/admin__experiments.html
@@ -11,12 +11,8 @@
 <div class="grid">
     <div class="employee-header flex-row-left">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
         </a>
-        <div class="employee-info">
-            <div th:text="${fullname}"></div>
-            <div th:text="${'Level ' + level}"></div>
-        </div>
     </div>
     <div class="grid__experiments grid-button button button_pressed">
         Experiments
