--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -10,12 +10,8 @@
 <body>
 <div class="flex-row-left header">
     <a th:href="@{/admin/main}">
-        <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
+        <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
     </a>
-    <div class="employee-info">
-        <div th:text="${fullname}"></div>
-        <div th:text="${'Level ' + level}"></div>
-    </div>
 </div>
 <form action="#" th:action="@{/admin/registerPrawn}" th:object="${form}" method="post"
       class="flex-column registration-box">
