--- a/src/main/resources/templates/scientists/sci__new-article.html
+++ b/src/main/resources/templates/scientists/sci__new-article.html
@@ -10,12 +10,8 @@
 <body>
 <div class="flex-row-left">
     <a th:href="@{/sci/main}">
-        <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
+        <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
     </a>
-    <div class="info">
-        <div th:text="${fullname}"></div>
-        <div th:text="${'Level ' + level}"></div>
-    </div>
 </div>
 <form action="#" th:action="@{article}" th:object="${form}" method="post" class="flex-column">
     <label class="form-item">
