--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -12,12 +12,8 @@
 <div class="grid">
     <div class="flex-row-left header">
         <a th:href="@{/sci/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon button button_back button_round">
+            <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
         </a>
-        <div class="info">
-            <div th:text="${fullname}"></div>
-            <div th:text="${'Level ' + level}"></div>
-        </div>
     </div>
     <form action="#" th:action="@{/sci/experiment}" th:object="${form}" method="post" class="grid__inputs flex-column">
         <label class="form-item">
@@ -26,7 +22,7 @@
         </label>
         <label class="form-item">
             <b>Type</b>
-            <select th:field="*{type}" class="input_big" >
+            <select th:field="*{type}" class="input_big">
                 <option th:value="minor" th:text="Minor"></option>
                 <option th:value="major" th:text="Major"></option>
             </select>
