--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -24,7 +24,7 @@
         vacancies</a>
     <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button">Synthesized
         & confiscated weapons</a>
-    <a th:href="@{/prawnRegister}" class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawn
+    <a th:href="@{/admin/prawns}" class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawn
         registration</a>
     <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button">Prawns'
         job applications</a>
