--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -68,7 +68,7 @@
             <div th:case="FINISHED">
                 <b> Finished on </b>
             </div>
-            <div th:text="${exp.statusDate}"></div>
+            <div class="datetime-to-format" th:text="${exp.statusDate}"></div>
             <b>Description</b>
             <div th:text="${exp.description}"></div>
             <div class="flex-column">
@@ -79,5 +79,6 @@
     </div>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/scientists/sci__main.js}"></script>
+<script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
 </body>
 </html>
